home and bookshelf component styling

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -11,6 +11,11 @@ nav{
   align-items: center;
   justify-content: space-between;
   padding: 0 20px 0 20px;
+  background-color: #5B2E28;
+  
+  a {
+    color: #F1F5BA;
+  }
   
   input {
     border-radius: 5px;
