--- a/app/views/layouts/application.ejs
+++ b/app/views/layouts/application.ejs
@@ -37,7 +37,7 @@
   <% } %>
   
   <nav>
-    <div>KNOWTHYSHELF</div>
+    <div><a href="/">KNOWTHYSHELF</a></div>
     <form action='/bookshelf' method='index'>
       <input name='q' type='text' placeholder='Search for books'/>
     </form>
