--- a/app/styles/book.css
+++ b/app/styles/book.css
@@ -18,6 +18,11 @@ img {
 
 .container {
   padding: 30px;
+  max-width: 750px;
+  margin: 0 auto;
+}
+
+.nav-links {
 }
 
 .summary-section {
@@ -27,11 +32,4 @@ img {
   margin-top: 40px;
   margin-left: 20px;
   max-width: 600px;
-}
-
-.details-section {
-  
-}
-
-.content-section {
 }
