--- a/app/styles/book.css
+++ b/app/styles/book.css
@@ -1,3 +1,12 @@
+.summary-section {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 60px;
+  margin-top: 40px;
+  margin-left: 20px;
+  max-width: 600px;
+}
+
 td {
   padding: 3px 5px 3px 5px;
 }
@@ -5,6 +14,23 @@ td {
 img {
   max-height: 250px;
   width: auto;
+}
+
+@media screen and (max-width: 460px) {
+  .summary-section {
+    display: block;
+  }
+  
+  img {
+    margin: 0 auto;
+    display: block;
+    padding-bottom: 20px;
+  }
+  
+  table {
+    display: block;
+    padding-left: 15px;
+  }
 }
 
 .header {
@@ -25,11 +51,3 @@ img {
 .nav-links {
 }
 
-.summary-section {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 60px;
-  margin-top: 40px;
-  margin-left: 20px;
-  max-width: 600px;
-}
