--- a/app/styles/home.css
+++ b/app/styles/home.css
@@ -2,10 +2,13 @@
   background-color: #04573B;
   text-align: center;
   padding: 15px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #F1F5E3;
 }
 
-h1 {
+.hero > h1 {
   margin-top: 0px;
+  color: #F1F5BA;
 }
 
 
