--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -36,6 +36,9 @@ nav{
   justify-content: space-around;
   flex-wrap: wrap;
   align-content: flex-start;
+footer {
+  text-align: center;
+  padding-top: 40px;
 }
 
 .container {
