--- a/app/views/layouts/application.ejs
+++ b/app/views/layouts/application.ejs
@@ -55,6 +55,14 @@
       <div id="<%= htmlWebpackPlugin.options.appMountIds[index]%>"></div>
     <% } %>
   <% } %>
+  
+  <footer>
+    KnowThyShelf 	&copy; <%= new Date().getFullYear() %>
+    <p>
+      Disclaimer: Though we try our best to ensure accuracy, we cannot 
+      guarantee that the information listed here is 100% correct.
+    </p>
+  </footer>
 
   <% if (htmlWebpackPlugin.options.window) { %>
     <script>
