--- a/app/views/layouts/application.ejs
+++ b/app/views/layouts/application.ejs
@@ -57,7 +57,9 @@
   <% } %>
   
   <footer>
-    KnowThyShelf 	&copy; <%= new Date().getFullYear() %>
+    KnowThyShelf | <a href='mailto:info@knowthyshelf.com'>info@knowthyshelf.com</a>
+    <br />
+    <a href='about'>About</a> | &copy; <%= new Date().getFullYear() %>
     <p>
       Disclaimer: Though we try our best to ensure accuracy, we cannot 
       guarantee that the information listed here is 100% correct.
