--- a/app/views/layouts/application.ejs
+++ b/app/views/layouts/application.ejs
@@ -40,9 +40,10 @@
   <nav>
     <div class='nav-elements'>
       <a href="/">KNOWTHYSHELF</a>
-      <form action='/bookshelf' method='index'>
-        <input name='q' type='text' placeholder='Search for books'/>
-      </form>
+      <p>
+        Identification points and publishing histories for rare and 
+        interesting books.
+      </p>
     </div>
   </nav>
 
