--- a/app/styles/bookshelf.css
+++ b/app/styles/bookshelf.css
@@ -1,9 +1,50 @@
-.search-box{
-  margin: 10px 20px 10px 20px;
+h1 {
+  margin-bottom: 0px;
+}
+
+h2 {
+  margin-top: 0px;
+  font-weight: normal;
+}
+
+.bookshelf {
+  background-color: #04573B;
+  padding: 15px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #F1F5E3;
+}
+
+.librarian {
+  max-width: 1000px;
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.title {
+  width: 50%;
+}
+
+.search-box {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  text-align: right;
+}
+
+.librarian > h1 {
+  margin-top: 0px;
+  color: #F1F5BA;
 }
 
 .ais-search-box {
   display: inline;
+}
+
+@media only screen and (max-width: 500px) {
+  h1 { font-size: 1.3em; }
+  h2 { font-size: 1em; }
+  .ais-stats--body { font-size: .7em; }
 }
 
 .ais-hits {
