add Raleway and Arima Madurai fonts

--- a/app/styles/bookshelf.css
+++ b/app/styles/bookshelf.css
@@ -62,10 +62,11 @@ h2 {
   width: 200px; 
   margin: 8px;
   text-align: center;
+  font-family: 'Arima Madurai', cursive;
 }
 
 .search-results {
-  max-width: 960px;
+  max-width: 1000px;
   margin: 0 auto;
 }
 
