--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,39 +1,10 @@
 body {
   margin: 0px;
-}
 
-nav {
-  height: 60px;
-}
+  font-family: 'Raleway', sans-serif;
 
-nav{
-  padding: 0 20px 0 20px;
-  background-color: #5B2E28;
-  
-  .nav-elements {
-    max-width: 1000px;
-    padding-top: 20px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  a {
-    color: #F1F5BA;
-  }
-
-  p {
-    margin-top: 0px;
-    color: white;
-  }
-
-  @media screen and (max-width: 720px) {
-    p {
-      max-width: 240px;
-      font-size: .8em;
-      padding-left: 20px;
-      text-align: right;
-    }
+  h1, h2 {
+    font-family: 'Arima Madurai', cursive;
   }
 }
 
