--- a/app/views/layouts/application.ejs
+++ b/app/views/layouts/application.ejs
@@ -17,6 +17,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   <% } %>
 
+  <link href="https://fonts.googleapis.com/css?family=Arima+Madurai|Raleway" rel="stylesheet">
+
   <% for (var css in htmlWebpackPlugin.files.css) { %>
     <link href="<%= htmlWebpackPlugin.files.css[css] %>" rel="stylesheet">
   <% } %>
