--- a/app/styles/bookshelf.css
+++ b/app/styles/bookshelf.css
@@ -25,6 +25,21 @@ h2 {
   width: 50%;
 }
 
+.ais-search-box {
+  display: inline;
+}
+
+#search-input {
+  padding: 7px;
+  width: 90%;
+  border-radius: 7px; 
+  display: absolute;
+  min-height: 30px;
+  font-size: 1.3em;
+  font-family: 'Arima Madurai', cursive;
+  padding-bottom: 0px;
+}
+
 .search-box {
   width: 50%;
   display: flex;
@@ -32,14 +47,29 @@ h2 {
   text-align: right;
 }
 
+@media screen and (max-width: 900px) {
+  .librarian {
+    display: block;
+    text-align: center;
+  }
+
+  .title {
+    width: 100%;
+  }
+
+  .search-box {
+    width: 100%;
+    text-align: center;
+  }
+}
+
+
 .librarian > h1 {
   margin-top: 0px;
   color: #F1F5BA;
 }
 
-.ais-search-box {
-  display: inline;
-}
+
 
 @media only screen and (max-width: 500px) {
   h1 { font-size: 1.3em; }
@@ -70,16 +100,10 @@ h2 {
   margin: 0 auto;
 }
 
-#search-input {
-  padding: 7px;
-  width: 60%;
-  border-radius: 10px; 
-  display: absolute;
-}
 
 #stats-container {
   display: inline-block;
-  float: right;
-  padding-top: 7px;
+  padding-top: 15px;
+  font-size: 1.2em;
 }
 
