--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -6,6 +6,24 @@ body {
   h1, h2 {
     font-family: 'Arima Madurai', cursive;
   }
+
+  h1 {
+    font-size: 3.2em;
+  }
+
+  h2 {
+    font-size: 2.1em;
+  }
+
+  @media screen and (max-width: 900px) {
+    h1 {
+      font-size: 2.7em;
+    }
+
+    h2 {
+      font-size: 1.6em;
+    }
+  }
 }
 
 footer {
