--- a/app/styles/nav.css
+++ b/app/styles/nav.css
@@ -1,5 +1,5 @@
 nav {
-  height: 60px;
+  min-height: 60px;
   padding: 0 20px 0 20px;
   background-color: #5B2E28;
 }
@@ -14,6 +14,7 @@ nav {
 
 .nav-elements > a {
   color: #F1F5BA;
+  text-decoration: none;
 }
 
 .nav-elements > p {
@@ -22,10 +23,14 @@ nav {
 }
 
 @media screen and (max-width: 720px) {
+  .nav-elements {
+    padding-top: 10px;
+  }
   .nav-elements > p {
     max-width: 240px;
     font-size: .8em;
-    padding-left: 20px;
-    text-align: right;
+    padding-right: 10px;
+    margin-bottom: 7px;
+    text-align: left;
   }
 }
