--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,8 +3,13 @@ body {
 
   font-family: 'Raleway', sans-serif;
 
-  h1, h2 {
+  h1 {
     font-family: 'Arima Madurai', cursive;
+  }
+
+  h5 {
+    font-family: 'Raleway', sans-serif;
+    margin-top: 0px;
   }
 
   h1 {
