--- a/app/styles/bookshelf.css
+++ b/app/styles/bookshelf.css
@@ -27,5 +27,11 @@
   font-family: 'Arima Madurai', cursive;
 }
 
+.book-container {
+  position: absolute;
+  top: 0;
+  z-index: 1;
+  background: white;
+}
 
 
