--- a/app/styles/bookshelf.css
+++ b/app/styles/bookshelf.css
@@ -19,5 +19,17 @@
 }
 
 
+@keyframes open-book {
+    from {opacity: .1}
+    to {opacity: 1}
+}
+
+.book-container {
+    opacity: .1;
+    animation-name: open-book;
+    animation-duration: 3s;
+    animation-fill-mode: forwards;
+}
+
 
 
