--- a/app/styles/bookshelf.css
+++ b/app/styles/bookshelf.css
@@ -18,18 +18,30 @@
   font-size: 1.2em;
 }
 
+@keyframes open-shelf {
+    from {opacity: .1}
+    to {opacity: 1}
+}
+
+.book-shelf {
+  opacity: .1;
+  animation-name: open-shelf;
+  animation-duration: 3s;
+  animation-fill-mode: forwards;
+}
 
 @keyframes open-book {
     from {opacity: .1}
     to {opacity: 1}
 }
 
-.book-container {
+.book-box {
     opacity: .1;
     animation-name: open-book;
     animation-duration: 3s;
     animation-fill-mode: forwards;
 }
+
 
 
 
