--- a/app/styles/bookcover.css
+++ b/app/styles/bookcover.css
@@ -7,3 +7,14 @@
   text-align: center;
   font-family: 'Arima Madurai', cursive;
 }
+
+.cover-image {
+  border-radius: 0px;
+  cursor: pointer;
+  transition: all .2s linear;
+
+}
+
+.cover-image:hover {
+  transform: translateY(-5px);
+}
