--- a/app/styles/bookshelf.css
+++ b/app/styles/bookshelf.css
@@ -18,15 +18,29 @@
   font-size: 1.2em;
 }
 
-@keyframes open-shelf {
+
+
+@keyframes load-shelf {
   from {opacity: .1}
   to {opacity: 1}
 }
 
 .book-shelf {
   opacity: .1;
-  animation-name: open-shelf;
+  animation-name: load-shelf;
   animation-duration: 3s;
   animation-fill-mode: forwards;
+}
+
+.cover-image {
+  cursor: pointer;
+  transform: scale(1);
+  transition: all 1s linear;
+}
+
+.cover-image:hover {
+  padding-left: 15px;
+  padding-right: 15px;
+  transform: translateY(-5px) scale(1.5);
 }
 
